vpc.tf
resource "aws_vpc" "main" {
  cidr_block       = var.vpc_full_cidr_block
  instance_tenancy = "default"

  tags = {
    Name = "main-vpc"
  }
}
